<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.httpsdesignstudio.aparna.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
       >

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="75dp"
            android:src="@mipmap/aparnalogo"/>



        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/hintEmail"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/hintPassword"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="25dp"
            android:text="@string/btnRegister"
            android:textStyle="normal"
            android:background="@drawable/button_rounded_rectangle"
            android:textColor="@color/colorIcons"
            />

        <TextView
            android:id="@+id/tvRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLink"
            android:text="@string/tvRegistered"
            android:layout_gravity="center_horizontal"

            />

    </LinearLayout>


</RelativeLayout>
